--- a/SongsClient/assets/css/main.css
+++ b/SongsClient/assets/css/main.css
@@ -669,6 +669,10 @@ body {
     content: "Login"
 }
 
+.side-nav li.logout::before {
+    content: "Logout";
+  }
+  
 .side-nav li.is-active {
     color: #0f33ff;
     -webkit-transition: color .4s ease-in-out;
@@ -905,6 +909,21 @@ body {
     .intro--options {
         display: none
     }
+}
+
+.btnbtn{
+    margin-right: auto;
+    margin-left: auto;
+    margin-top: 30px;
+    width: 400px;
+    max-width: 100%;
+    line-height: 50px;
+    font-size: 16px;
+    font-weight: 700;
+    text-transform: uppercase;
+    background-color: #0f33ff;
+    border: none;
+    border-radius: 0
 }
 
 .work {
