--- a/SongsClient/assets/css/main.css
+++ b/SongsClient/assets/css/main.css
@@ -1930,28 +1930,24 @@ body {
     box-shadow: 0 0 10px 5px rgba(255, 255, 255, 0.8);
 }
 
-#favoriteSongsContainer {
+#favoriteSongsContainer, #artistsContainer {
     overflow: auto;
     max-height: 65%;
     display: flex;
     justify-content: center;
 }
 
-#favoriteSongsContainer::-webkit-scrollbar {
+#favoriteSongsContainer::-webkit-scrollbar,#artistsContainer::-webkit-scrollbar {
     width: 10px;
-    /* Set the width of the scrollbar */
     background-color: transparent;
-    /* Set the background color of the scrollbar */
 }
 
-#favoriteSongsContainer::-webkit-scrollbar-thumb {
+#favoriteSongsContainer::-webkit-scrollbar-thumb,#artistsContainer::-webkit-scrollbar-thumb  {
     background-color: rgba(255, 255, 255, 0.5);
-    /* Set the color of the scrollbar thumb */
     border-radius: 5px;
-    /* Round the corners of the scrollbar thumb */
 }
 
-#favoriteSongs {
+#favoriteSongs, #artists {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -1965,4 +1961,49 @@ body {
 
 .randSongs:hover {
     color: #0f33ff !important;
+}
+
+.artist {
+    perspective: 1000px;
+    width: 200px;
+    height: 200px;
+}
+
+.flipper {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    transform-style: preserve-3d;
+    transition: transform 0.6s;
+}
+
+.front,
+.back {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    backface-visibility: hidden;
+}
+
+.front {
+    z-index: 2;
+}
+
+.back {
+    transform: rotateY(180deg);
+}
+.front>img{
+    border-radius: 20px;
+}
+
+.back>h4{
+    color: #fc42ea;
+}
+
+.artist:hover .flipper {
+    transform: rotateY(180deg);
+}
+
+.artist{
+    cursor: pointer;
 }
