--- a/SongsClient/assets/css/main.css
+++ b/SongsClient/assets/css/main.css
@@ -1966,3 +1966,37 @@ body {
 .randSongs:hover {
     color: #0f33ff !important;
 }
+
+.song-popup {
+    max-height: 300px;
+    overflow-y: auto;
+    padding: 10px;
+    text-align: left;
+}
+
+/* Responsive Styles */
+@media screen and (max-width: 600px) {
+    .song-popup {
+        max-height: 200px;
+    }
+}
+
+@media screen and (max-width: 400px) {
+    .song-popup {
+        max-height: 150px;
+    }
+}
+
+.song-popup::-webkit-scrollbar {
+    width: 10px;
+    /* Set the width of the scrollbar */
+    background-color: transparent;
+    /* Set the background color of the scrollbar */
+}
+
+.song-popup::-webkit-scrollbar-thumb {
+    background-color: rgba(255, 255, 255, 0.5);
+    /* Set the color of the scrollbar thumb */
+    border-radius: 5px;
+    /* Round the corners of the scrollbar thumb */
+}
