--- a/SongsClient/assets/css/main.css
+++ b/SongsClient/assets/css/main.css
@@ -1091,6 +1091,22 @@ body {
     left: 0
 }
 
+@media (max-width: 1400px) {
+    .work--lockup .slider--item-image {
+        width: 120px;
+        height: 120px
+    }
+
+    .work--lockup .slider--item-center .slider--item-image {
+        width: 240px;
+        height: 240px
+    }
+
+    .work--lockup .slider--next,
+    .work--lockup .slider--prev {
+        top: 130px
+    }
+}
 @media (max-width: 900px) {
     .work--lockup .slider--item-image {
         width: 120px;
@@ -1564,7 +1580,7 @@ body {
     -webkit-align-items: center;
     -ms-flex-align: center;
     align-items: center;
-    margin: 30px 0
+    
 }
 
 .work-request--options .options-a {
@@ -1595,7 +1611,7 @@ body {
 
 .work-request--options label {
     display: block;
-    width: 200px;
+    width: 150px;
     margin-bottom: 30px;
     line-height: 50px;
     font-size: 16px;
@@ -1639,7 +1655,7 @@ body {
     -webkit-justify-content: space-between;
     -ms-flex-pack: justify;
     justify-content: space-between;
-    margin-bottom: 60px
+    margin-bottom: 30px
 }
 
 .work-request--information .information-name,
