--- a/SongsClient/assets/css/main.css
+++ b/SongsClient/assets/css/main.css
@@ -1990,6 +1990,8 @@ body {
     margin: 20px;
     display: flex;
     align-items: center;
+    min-width: 150px;
+    justify-content: center;
 }
 .answerDiv:hover{
     border: 2px solid  #0f33ff;
@@ -2007,7 +2009,7 @@ body {
  position: relative;
  text-align: center;
  border: 3px solid  white;
-
+justify-content: center;
 }
 #question{
    
