--- a/SongsClient/assets/css/main.css
+++ b/SongsClient/assets/css/main.css
@@ -1560,9 +1560,36 @@ body {
     text-transform: uppercase;
     background-color: #0f33ff;
     border: none;
-    border-radius: 0
+    border-radius: 0;
+    margin-left: 50px;
 }
 
+/* //////// */
+.microphone-button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 32px;
+    height: 32px;
+    border: 1px solid white;
+    border-radius: 60px;
+    background-color: black;
+    cursor: pointer;
+    transition: transform 0.3s;
+    position: absolute;
+    z-index: 1;
+    margin-left: 40px;
+  }
+  
+  .microphone-button:hover {
+    transform: scale(1.1);
+  }
+  
+  .microphone-icon {
+    width: 100%;
+    height: 100%;
+  }
+  /* //////////////// */
 .work-request input[type="submit"]:focus {
     outline: none
 }
@@ -1931,6 +1958,9 @@ body {
 
 #searchBtn {
     width: 20%;
+    line-height: 30px;
+    height: 90%;
+    border-radius: 20px;
 }
 
 .artiststBtns {
