updated userScore and quiz to load when localstorage is ready

--- a/SongsClient/assets/css/main.css
+++ b/SongsClient/assets/css/main.css
@@ -2268,3 +2268,22 @@ body {
 #logoHeader {
     text-transform: none;
 }
+.loader {
+    width: 48px;
+    height: 48px;
+    border: 5px solid #FFF;
+    border-bottom-color: #0f33ff;
+    border-radius: 50%;
+    display: inline-block;
+    box-sizing: border-box;
+    animation: rotation 1s linear infinite;
+    }
+
+    @keyframes rotation {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+    } 
