--- a/SongsClient/assets/css/main.css
+++ b/SongsClient/assets/css/main.css
@@ -951,13 +951,15 @@ body {
     .work {
         max-width: 100%
     }
-    
+
 }
-@media only screen and (min-width: 1500px)  {
-    .work--lockup{
-    margin-top: 100px !important;
+
+@media only screen and (min-width: 1500px) {
+    .work--lockup {
+        margin-top: 100px !important;
+    }
 }
-}
+
 .work h2 {
     margin: 0 0 20px 0;
     font-size: 30px;
@@ -1584,17 +1586,18 @@ body {
     position: absolute;
     z-index: 1;
     margin-left: 3%;
-  }
-  
-  .microphone-button:hover {
+}
+
+.microphone-button:hover {
     transform: scale(1.1);
-  }
-  
-  .microphone-icon {
+}
+
+.microphone-icon {
     width: 100%;
     height: 100%;
-  }
-  /* //////////////// */
+}
+
+/* //////////////// */
 .work-request input[type="submit"]:focus {
     outline: none
 }
@@ -1766,7 +1769,7 @@ body {
         -webkit-justify-content: space-between;
         -ms-flex-pack: justify;
         justify-content: center;
-        
+
     }
 }
 
@@ -2239,12 +2242,14 @@ body {
 .back>h4 {
     color: #fc42ea;
 }
-#removeArtistFromFav{
+
+#removeArtistFromFav {
     font-size: 26px;
     display: inline-block;
     margin: 15px;
     cursor: pointer;
 }
+
 .artist:hover {
     transform: rotateY(180deg);
 }
@@ -2277,6 +2282,7 @@ body {
 #logoHeader {
     text-transform: none;
 }
+
 .loader {
     width: 48px;
     height: 48px;
@@ -2286,13 +2292,33 @@ body {
     display: inline-block;
     box-sizing: border-box;
     animation: rotation 1s linear infinite;
-    }
+}
 
-    @keyframes rotation {
+@keyframes rotation {
     0% {
         transform: rotate(0deg);
     }
+
     100% {
         transform: rotate(360deg);
     }
-    } 
+}
+
+.adminButton {
+    display: inline-block;
+    padding: 5px;
+    background-color: #b50000;
+    color: #fff;
+    text-decoration: none;
+    border-radius: 4px;
+    font-size: 12px;
+    margin-right: 5px;
+}
+
+.adminButton:hover {
+    opacity: 0.8;
+}
+
+#adminBtns {
+    margin-top: 10px;
+}
