--- a/SongsClient/assets/css/main.css
+++ b/SongsClient/assets/css/main.css
@@ -1569,9 +1569,11 @@ body {
     border: none;
     border-radius: 0;
 }
-.searchInput{
+
+.searchInput {
     margin-right: 50px;
 }
+
 /* //////// */
 .microphone-button {
     display: flex;
@@ -2052,7 +2054,8 @@ body {
     margin-top: 90px;
 }
 
-#playAgain,#leaderBoard {
+#playAgain,
+#leaderBoard {
     margin-top: 20px !important;
     margin-bottom: 10px;
 }
@@ -2077,7 +2080,8 @@ body {
 }
 
 #startQuizBtn,
-#playAgain,#leaderBoard {
+#playAgain,
+#leaderBoard {
     background-color: white;
     border: 3px solid black;
     color: black;
@@ -2223,22 +2227,22 @@ body {
 }
 
 .front,
-.back {
+.front {
     position: absolute;
     width: 100%;
     height: 100%;
     backface-visibility: hidden;
 }
 
-.front {
+.back {
     z-index: 2;
 }
 
-.back {
+.front {
     transform: rotateY(180deg);
 }
 
-.front>img {
+.back>img {
     width: 100%;
     height: 100%;
     object-fit: cover;
