--- a/SongsClient/assets/css/main.css
+++ b/SongsClient/assets/css/main.css
@@ -2226,7 +2226,6 @@ body {
     margin: 15px;
 }
 
-.front,
 .front {
     position: absolute;
     width: 100%;
@@ -2234,15 +2233,15 @@ body {
     backface-visibility: hidden;
 }
 
-.back {
+.front {
     z-index: 2;
 }
 
-.front {
+.back {
     transform: rotateY(180deg);
 }
 
-.back>img {
+.front>img {
     width: 100%;
     height: 100%;
     object-fit: cover;
@@ -2252,6 +2251,11 @@ body {
 .back>h4 {
     color: #fc42ea;
 }
+
+div.about h1 {
+    font-size: 24px;
+    margin-top: 10px;
+  }
 
 #removeArtistFromFav {
     font-size: 26px;
