--- a/SongsClient/assets/css/main.css
+++ b/SongsClient/assets/css/main.css
@@ -1968,10 +1968,6 @@ body {
 }
 
 
-.artiststBtns {
-    width: 40%;
-}
-
 #searchBtn {
     width: 22%;
     line-height: 30px;
@@ -1979,21 +1975,17 @@ body {
     border-radius: 20px;
 }
 
-.artiststBtns {
-    display: inline-block !important;
-    width: 200px;
-}
 
 .artiststBtns {
     background-color: #0f33ff;
     color: white;
     border-radius: 15px;
     border: 1px solid #0f33ff;
-    width: 100px !important;
-    height: 50px !important;
+    width: 150px !important;
     display: inline-block !important;
     margin-left: 30px;
     font-size: 16px !important;
+    height: 30px;
 }
 
 #searchArtistInput {
@@ -2001,7 +1993,9 @@ body {
 }
 
 .artiststBtns:hover {
-    opacity: .9;
+    color: #0f33ff;
+    background-color: white;
+    border-color: white;
 }
 
 #search {
