--- a/SongsClient/assets/css/main.css
+++ b/SongsClient/assets/css/main.css
@@ -351,6 +351,7 @@ body {
     width: 100%;
     height: 100%
 }
+
 .device-notification {
     display: none;
     position: fixed;
@@ -1778,12 +1779,14 @@ body {
 
     }
 }
+
 @media (max-width: 720px) {
     .work-request--information {
         margin-bottom: 30px;
-        flex-wrap:wrap;
+        flex-wrap: wrap;
     }
 }
+
 @media (max-width: 600px) {
     .work-request--options label {
         width: 150px;
@@ -1798,9 +1801,10 @@ body {
 
     .work-request--information {
         margin-bottom: 30px;
-        flex-wrap:wrap;
+        flex-wrap: wrap;
     }
-    .artiststBtns{
+
+    .artiststBtns {
         margin: 5px;
     }
 
@@ -1982,12 +1986,14 @@ body {
     height: 90%;
     border-radius: 20px;
 }
-#searchArtistBtn{
+
+#searchArtistBtn {
     background-color: white;
-    border-color:white;
-    color:black
+    border-color: white;
+    color: black
 }
-#searchArtistBtn:hover{
+
+#searchArtistBtn:hover {
     opacity: 0.8;
 }
 
@@ -2058,10 +2064,9 @@ body {
 }
 
 #Quiz {
-    margin: auto;
+    margin: 0 auto;
     /* height: 50%; */
     text-align: center;
-    margin-top: 90px;
 }
 
 #playAgain,
@@ -2071,13 +2076,18 @@ body {
 }
 
 #quizHeader {
-    font-size: 70px !important;
-    margin-bottom: 30px;
+    font-size: 70px;
+    margin-bottom: 0px;
+    margin-top: 0px;
 }
 
 #scoreOver {
     font-size: 35px;
-    margin-bottom: 5px;
+    margin: 0px;
+}
+
+#quiz_image {
+    border-radius: 25px;
 }
 
 #artistSongsDetails {
@@ -2109,8 +2119,11 @@ body {
 }
 
 #question {
+    display: flex;
     margin-bottom: 20px;
     font-size: 19px;
+    align-items: center;
+    justify-content: center;
 }
 
 #scoreTimer {
@@ -2119,6 +2132,7 @@ body {
 
 #myTable {
     width: 100%;
+    margin: 0 auto;
 }
 
 #quizWrapper {
@@ -2132,7 +2146,7 @@ body {
 }
 
 #winnerImg {
-    width: 45%;
+    width: 35%;
 }
 
 .row {
@@ -2199,11 +2213,36 @@ body {
     .song-popup {
         max-height: 200px;
     }
+
+    #winnerImg {
+        width: 150px;
+    }
 }
 
 @media screen and (max-width: 400px) {
     .song-popup {
         max-height: 150px;
+    }
+
+    #myTable,
+    #Quiz {
+        width: 100% !important;
+        margin: auto;
+    }
+}
+
+@media screen and (max-width: 1300px) {
+    #Quiz {
+        width: 60%;
+        height: 80%;
+    }
+
+    thead {
+        height: 200px;
+    }
+
+    #quiz_image {
+        height: 200px;
     }
 }
 
@@ -2266,7 +2305,7 @@ body {
 div.about h1 {
     font-size: 24px;
     margin-top: 10px;
-  }
+}
 
 #removeArtistFromFav {
     font-size: 26px;
@@ -2347,6 +2386,7 @@ div.about h1 {
 #adminBtns {
     margin-top: 10px;
 }
+
 #audioPlayer {
     margin-top: 20px;
 }
