--- a/SongsClient/assets/css/main.css
+++ b/SongsClient/assets/css/main.css
@@ -669,6 +669,10 @@ body {
     content: "Login"
 }
 
+.side-nav li:nth-child(7)::before {
+    content: "Additions"
+}
+
 .side-nav li.logout::before {
     content: "Logout";
 }
@@ -975,7 +979,6 @@ body {
     margin: 0 auto;
     padding: 0;
     list-style: none;
-    margin-top:120px;
 }
 
 .work--lockup .slider--item {
@@ -1096,6 +1099,7 @@ body {
 }
 
 @media (max-width: 1400px) {
+
     .work--lockup .slider--item-image {
         width: 120px;
         height: 120px
@@ -1440,6 +1444,12 @@ body {
     }
 }
 
+@media (min-width: 1450px) {
+    .work--lockup .slider {
+        margin-top: 100px;
+    }
+}
+
 @media (max-width: 767px) {
     .contact--lockup {
         -webkit-box-pack: center;
@@ -1631,8 +1641,9 @@ body {
     justify-content: center;
     margin-bottom: 20px;
 }
+
 .work-request--options .options-a label {
-    margin:8px;
+    margin: 8px;
 
 }
 
@@ -1706,13 +1717,15 @@ body {
 }
 
 @media (max-width: 400px) {
-    .work-request--information{
+    .work-request--information {
         margin-top: 0px;
     }
-    .slider{
+
+    .slider {
         margin-top: 0px !important;
     }
-    .slider--item-title{
+
+    .slider--item-title {
         margin-bottom: 0px;
         margin-top: 10px !important;
     }
@@ -2010,9 +2023,9 @@ body {
 }
 
 #searchArtistBtn {
-    background-color: white;
-    border-color: white;
-    color: black
+    background-color: black;
+    border: 2px solid white;
+    color: white
 }
 
 #searchArtistBtn:hover {
@@ -2035,6 +2048,12 @@ body {
     width: 210px;
 }
 
+
+.artiststBtns.active {
+    color: #0f33ff;
+    background-color: white;
+    border-color: white;
+}
 
 .artiststBtns:hover {
     color: #0f33ff;
@@ -2111,24 +2130,29 @@ body {
 #quiz_image {
     border-radius: 25px;
 }
-#Filter{
+
+#Filter {
     font-size: 18px;
     display: flex;
     align-items: center;
     justify-content: center;
     margin-right: 15px;
 }
+
 .songsDetails {
     cursor: pointer;
     color: rgb(0, 242, 255);
 }
-.songsList{
+
+.songsList {
     margin: 18px;
     cursor: pointer;
 }
-.songsList:hover{
+
+.songsList:hover {
     color: #0f33ff;
 }
+
 .songsDetails:hover {
     opacity: .7;
 }
@@ -2280,158 +2304,179 @@ body {
         margin: auto;
     }
 }
-    @media screen and (max-width: 1300px) {
-        #Quiz {
-            width: 60%;
-            height: 80%;
-        }
 
-        thead {
-            height: 200px;
-        }
-
-        #quiz_image {
-            height: 200px;
-        }
+@media screen and (max-width: 1300px) {
+    #Quiz {
+        width: 60%;
+        height: 80%;
     }
 
-    .song-popup::-webkit-scrollbar {
-        width: 10px;
-        /* Set the width of the scrollbar */
-        background-color: transparent;
-        /* Set the background color of the scrollbar */
-    }
-
-    .song-popup::-webkit-scrollbar-thumb {
-        background-color: rgba(255, 255, 255, 0.5);
-        /* Set the color of the scrollbar thumb */
-        border-radius: 5px;
-        /* Round the corners of the scrollbar thumb */
-    }
-
-    .artist {
-        perspective: 1000px;
-        width: 200px;
+    thead {
         height: 200px;
     }
 
-    .artist {
-        position: relative;
-        width: 180px;
-        height: 180px;
-        transform-style: preserve-3d;
-        transition: transform 0.6s;
-        margin: 15px;
+    #quiz_image {
+        height: 200px;
+    }
+}
+
+.song-popup::-webkit-scrollbar {
+    width: 10px;
+    /* Set the width of the scrollbar */
+    background-color: transparent;
+    /* Set the background color of the scrollbar */
+}
+
+.song-popup::-webkit-scrollbar-thumb {
+    background-color: rgba(255, 255, 255, 0.5);
+    /* Set the color of the scrollbar thumb */
+    border-radius: 5px;
+    /* Round the corners of the scrollbar thumb */
+}
+
+.artist {
+    perspective: 1000px;
+    width: 200px;
+    height: 200px;
+}
+
+.artist {
+    position: relative;
+    width: 180px;
+    height: 180px;
+    transform-style: preserve-3d;
+    transition: transform 0.6s;
+    margin: 15px;
+}
+
+.front {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    backface-visibility: hidden;
+}
+
+.front {
+    z-index: 2;
+}
+
+.back {
+    transform: rotateY(180deg);
+    height: 90%;
+}
+
+.front>img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 20px;
+}
+
+.back>h4 {
+    color: #fc42ea;
+}
+
+div.about h1 {
+    font-size: 24px;
+    margin-top: 10px;
+}
+
+.removeArtistFromFav {
+    font-size: 26px;
+    display: inline-block;
+    margin: 15px;
+    cursor: pointer;
+}
+
+.artist:hover {
+    transform: rotateY(180deg);
+}
+
+.artist {
+    cursor: pointer;
+}
+
+.artiststBtns {
+    display: inline-block;
+    width: 60px;
+    background-color: #0f33ff;
+    color: white;
+    font-size: 20px;
+}
+
+.fa.fa-heart-o {
+    cursor: pointer;
+    font-size: 25px;
+}
+
+.fa.fa-heart-o:hover {
+    color: red !important;
+}
+
+#logoHeader {
+    text-transform: none;
+}
+
+.loader {
+    width: 48px;
+    height: 48px;
+    border: 5px solid #FFF;
+    border-bottom-color: #0f33ff;
+    border-radius: 50%;
+    display: inline-block;
+    box-sizing: border-box;
+    animation: rotation 1s linear infinite;
+}
+
+@keyframes rotation {
+    0% {
+        transform: rotate(0deg);
     }
 
-    .front {
-        position: absolute;
-        width: 100%;
-        height: 100%;
-        backface-visibility: hidden;
+    100% {
+        transform: rotate(360deg);
     }
+}
 
-    .front {
-        z-index: 2;
-    }
+.adminButton {
+    display: inline-block;
+    padding: 5px;
+    background-color: #b50000;
+    color: #fff;
+    text-decoration: none;
+    border-radius: 4px;
+    font-size: 12px;
+    margin-right: 5px;
+}
 
-    .back {
-        transform: rotateY(180deg);
-        height: 90%;
-    }
+.adminButton:hover {
+    opacity: 0.8;
+}
 
-    .front>img {
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-        border-radius: 20px;
-    }
+#adminBtns {
+    margin-top: 10px;
+}
 
-    .back>h4 {
-        color: #fc42ea;
-    }
+#audioPlayer {
+    margin-top: 20px;
+}
 
-    div.about h1 {
-        font-size: 24px;
-        margin-top: 10px;
-    }
+#additionsPage {
+    overflow-y: auto;
+    text-align: center;
+    font-size: 20px;
+  }
 
-    .removeArtistFromFav {
-        font-size: 26px;
-        display: inline-block;
-        margin: 15px;
-        cursor: pointer;
-    }
+  .additionHeader{
+    color: rgb(6, 250, 246);
+    cursor: pointer;
+    margin: 0px;
+  }
 
-    .artist:hover {
-        transform: rotateY(180deg);
-    }
-
-    .artist {
-        cursor: pointer;
-    }
-
-    .artiststBtns {
-        display: inline-block;
-        width: 60px;
-        background-color: #0f33ff;
-        color: white;
-        font-size: 20px;
-    }
-
-    .fa.fa-heart-o {
-        cursor: pointer;
-        font-size: 25px;
-    }
-
-    .fa.fa-heart-o:hover {
-        color: red !important;
-    }
-
-    #logoHeader {
-        text-transform: none;
-    }
-
-    .loader {
-        width: 48px;
-        height: 48px;
-        border: 5px solid #FFF;
-        border-bottom-color: #0f33ff;
-        border-radius: 50%;
-        display: inline-block;
-        box-sizing: border-box;
-        animation: rotation 1s linear infinite;
-    }
-
-    @keyframes rotation {
-        0% {
-            transform: rotate(0deg);
-        }
-
-        100% {
-            transform: rotate(360deg);
-        }
-    }
-
-    .adminButton {
-        display: inline-block;
-        padding: 5px;
-        background-color: #b50000;
-        color: #fff;
-        text-decoration: none;
-        border-radius: 4px;
-        font-size: 12px;
-        margin-right: 5px;
-    }
-
-    .adminButton:hover {
-        opacity: 0.8;
-    }
-
-    #adminBtns {
-        margin-top: 10px;
-    }
-
-    #audioPlayer {
-        margin-top: 20px;
-    }
+  .additionDescription{
+    margin-bottom: 24px;  
+    margin-top: 0px;  
+}
+.additionDescription p:hover {
+  box-shadow: 0 0 10px 5px rgba(255, 255, 255, 0.8);
+}
