--- a/SongsClient/assets/css/main.css
+++ b/SongsClient/assets/css/main.css
@@ -2461,22 +2461,33 @@ div.about h1 {
     margin-top: 20px;
 }
 
-#additionsPage {
-    overflow-y: auto;
-    text-align: center;
-    font-size: 20px;
-  }
-
-  .additionHeader{
+.additionHeader {
     color: rgb(6, 250, 246);
     cursor: pointer;
     margin: 0px;
-  }
+    text-align: center;
+    font-size: 24px;
+}
 
-  .additionDescription{
-    margin-bottom: 24px;  
-    margin-top: 0px;  
+.additionDescription {
+    margin-bottom: 24px;
+    margin-top: 0px;
+    text-align: center;
+    font-size: 18px;
 }
-.additionDescription p:hover {
-  box-shadow: 0 0 10px 5px rgba(255, 255, 255, 0.8);
+
+#additionsPage{
+    display: flex;
+    overflow: auto;
 }
+#additionsPage::-webkit-scrollbar {
+    width: 8px;
+  }
+  
+  #additionsPage::-webkit-scrollbar-track {
+    background-color: transparent;
+  }
+  
+  #additionsPage::-webkit-scrollbar-thumb {
+    background-color: transparent;
+  }
