--- a/SongsClient/assets/css/main.css
+++ b/SongsClient/assets/css/main.css
@@ -405,16 +405,16 @@ body {
     text-align: center
 }
 
-@media (max-width: 767px) and (min-width: 601px) and (max-height: 680px) {
+/* @media (max-width: 767px) and (min-width: 601px) and (max-height: 680px) {
     .device-notification {
         display: -webkit-box;
         display: -webkit-flex;
         display: -ms-flexbox;
         display: flex
     }
-}
+} */
 
-@media (max-width: 600px) and (min-width: 480px) and (max-height: 580px) {
+/* @media (max-width: 600px) and (min-width: 480px) and (max-height: 580px) {
     .device-notification {
         display: -webkit-box;
         display: -webkit-flex;
@@ -430,7 +430,7 @@ body {
         display: -ms-flexbox;
         display: flex
     }
-}
+} */
 
 @media(max-width: 359px) {
     .device-notification {
@@ -439,7 +439,7 @@ body {
         display: -ms-flexbox;
         display: flex
     }
-} */
+} 
 
 .section {
     opacity: 0;
