--- a/SongsClient/assets/css/main.css
+++ b/SongsClient/assets/css/main.css
@@ -2536,3 +2536,10 @@ a.youtube-link:hover {
     width: 60px;
     margin-left: 10px;
 }
+.new_comment{
+    color: black;
+    font: 14px;
+}
+.deleteComment{
+    color: white;
+}
