add and remove comments from songs

--- a/SongsClient/assets/css/main.css
+++ b/SongsClient/assets/css/main.css
@@ -2032,7 +2032,7 @@ body {
 #searchBtn {
     width: 22%;
     line-height: 30px;
-    height: 90%;
+    height: 100%;
     border-radius: 20px;
 }
 
@@ -2542,4 +2542,5 @@ a.youtube-link:hover {
 }
 .deleteComment{
     color: white;
+    cursor: pointer;
 }
