--- a/SongsClient/assets/css/main.css
+++ b/SongsClient/assets/css/main.css
@@ -1459,7 +1459,7 @@ body {
 }
 
 @media (min-width: 1450px) {
-    .work--lockup .slider {
+    .work--lockup.songsGallery {
         margin-top: 100px;
     }
 }
